Fixed bug created by removing gap earlier

--- a/Frontend/DAT257_Website/src/App.css
+++ b/Frontend/DAT257_Website/src/App.css
@@ -5,6 +5,7 @@
   max-width: 100vw;
   display: flex;
   flex-direction: column;
+  gap: 10rem;
 }
 
 .logo {
