--- a/Frontend/DAT257_Website/src/Components/WebsiteFeature/WebsiteFeature.css
+++ b/Frontend/DAT257_Website/src/Components/WebsiteFeature/WebsiteFeature.css
@@ -1,3 +1,4 @@
+#root{gap: 0 !important}
 .featureImage{
     color: #fff;
     background-color: rgb(9, 161, 118);
